--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,11 @@
 <head>
 	<title>Hello Coursera</title>
 </head>
+Why I love learning this stuff<ul>
+<li>I can do thingz</li>
+<li>shoobidy doo wop</li>
+<li>Dancing to Mj is fun</li>
+</ul>
 <body>
 <h1>Hello Coursera It's a great course! </h1>
 <span>&hearts;</span>
