my first css update

--- a/site/index.html
+++ b/site/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style 
+	body {background-color: blue;}
+</style>
 	<title>Hello Coursera</title>
 </head>
 Why I love learning this stuff<ul>
@@ -11,5 +14,8 @@ Why I love learning this stuff<ul>
 <body>
 <h1>Hello Coursera It's a great course! </h1>
 <span>&hearts;</span>
+<p>
+Thirty days has September - April, June, and November. All the rest have thirty-one, excepting February alone.
+</p>
 </body>
 </html>
