--- a/site/index.html
+++ b/site/index.html
@@ -3,16 +3,21 @@
 <head>
 <style>
 	body {background-color: blue;}
+	p{
+		color:red;
+		font-size:18px;
+		width:200px;
+	}
 </style>
 	<title>Hello Coursera</title>
 </head>
+<body>
+<h1>Hello Coursera It's a great course! </h1>
 Why I love learning this stuff<ul>
 <li>I can do thingz</li>
 <li>shoobidy doo wop</li>
 <li>Dancing to Mj is fun</li>
 </ul>
-<body>
-<h1>Hello Coursera It's a great course! </h1>
 <span>&hearts;</span>
 <p>
 Thirty days has September - April, June, and November. All the rest have thirty-one, excepting February alone.
