--- a/site/index.html
+++ b/site/index.html
@@ -8,6 +8,10 @@
 		font-size:18px;
 		width:200px;
 	}
+	title{
+		text-align: center;
+		color: teal;
+	}
 </style>
 	<title>Hello Coursera</title>
 </head>
