--- a/site/index.html
+++ b/site/index.html
@@ -16,11 +16,11 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello Coursera It's a great course! </h1>
+<h1>JACKY, LOOK WHAT I CAN DO!!!</h1>
 Why I love learning this stuff<ul>
 <li>I can do thingz</li>
 <li>shoobidy doo wop</li>
-<li>Dancing to Mj is fun</li>
+<li>colors!!!!</li>
 </ul>
 <span>&hearts;</span>
 <p>
