trying to position text left

--- a/site/index.html
+++ b/site/index.html
@@ -12,12 +12,18 @@
 		text-align: center;
 		color: teal;
 	}
+	ul{
+		position: relative;
+		left: 30px;
+	}
+
 </style>
 	<title>Hello Coursera</title>
 </head>
 <body>
 <h1>JACKY, LOOK WHAT I CAN DO!!!</h1>
-Why I love learning this stuff<ul>
+Why I love learning this stuff
+<ul>
 <li>I can do thingz</li>
 <li>shoobidy doo wop</li>
 <li>colors!!!!</li>
